--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.1.1",
     "diffie-hellman": "^5.0.3",
     "firebase": "^9.17.1",
+    "node-forge": "^1.3.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
